[package]
name = "webwriter"
version = "0.4.1"
description = "Windows/Mac/Linux version of WebWriter"
authors = ["Frederic Salmen <frederic@fsalmen.de>"]
license = "UNLICENSED"
repository = "https://github.com/salmenf/webwriter.git"
default-run = "webwriter"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1.2.3", features = ["devtools", "dialog-all", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-write-file", "http-all", "os-all", "path-all", "shell-execute", "shell-open", "shell-sidecar", "updater"] }

[dependencies.tauri-plugin-fs-extra]
git = "https://github.com/tauri-apps/tauri-plugin-fs-extra"
branch = "dev"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
