[package]
name = "webwriter"
version = "0.11.0"
description = "Windows/Mac/Linux version of WebWriter"
authors = ["Frederic Salmen <frederic@fsalmen.de>"]
license = "UNLICENSED"
repository = "https://github.com/salmenf/webwriter.git"
default-run = "webwriter"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1.7.1", features = [ "macos-private-api", "devtools", "dialog-all", "fs-all", "http-all", "os-all", "path-all", "process-all", "shell-execute", "shell-open", "shell-sidecar", "updater", "window-all", "window-data-url"] }
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
font-loader = "0.11.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
